[gd_scene load_steps=29 format=2]

[ext_resource path="res://res/UI/Help UI/settings_page.pause.direct.png" type="Texture" id=1]
[ext_resource path="res://res/fonts/fixedsys.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PauseMenuSettings.gd" type="Script" id=3]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.95, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 0, 1, 0, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.966667, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 0, 1, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.975, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 0, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=14]
gradient = SubResource( 13 )
width = 8
height = 8

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 1, 0, 1 )
expand_margin_left = 5.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0.2, 0, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0.991667, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=19]
gradient = SubResource( 18 )
width = 76
height = 32

[sub_resource type="Gradient" id=20]
colors = PoolColorArray( 0, 1, 0, 1, 0, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=21]
gradient = SubResource( 20 )
width = 76
height = 32

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0.525, 0.95 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=23]
gradient = SubResource( 22 )
width = 76
height = 32

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0.95, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 0, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=25]
gradient = SubResource( 24 )
width = 76
height = 32

[sub_resource type="DynamicFont" id=8]
size = 43
font_data = ExtResource( 2 )

[node name="PauseMenuSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="SettingsPagepausedirect" type="Sprite" parent="Node2D"]
texture = ExtResource( 1 )
centered = false

[node name="MusicSlider" type="HSlider" parent="Node2D"]
margin_left = 138.0
margin_top = -2.0
margin_right = 712.0
margin_bottom = 240.0
custom_icons/tick = SubResource( 10 )
custom_icons/grabber_highlight = SubResource( 12 )
custom_icons/grabber = SubResource( 14 )
custom_styles/slider = SubResource( 15 )
custom_styles/grabber_area_highlight = SubResource( 16 )
custom_styles/grabber_area = SubResource( 17 )
min_value = -35.0
max_value = 0.0

[node name="Label" type="Label" parent="Node2D/MusicSlider"]
margin_left = -132.0
margin_top = 96.0
margin_right = 92.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Music: "

[node name="Volume" type="Label" parent="Node2D/MusicSlider"]
margin_left = 502.0
margin_top = 70.0
margin_right = 726.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "0
"

[node name="Sound" type="CheckButton" parent="Node2D"]
margin_left = 131.0
margin_top = 233.0
margin_right = 207.0
margin_bottom = 273.0
rect_scale = Vector2( 1, 0.985293 )
custom_icons/off = SubResource( 19 )
custom_icons/on = SubResource( 21 )

[node name="Label" type="Label" parent="Node2D/Sound"]
margin_left = -129.0
margin_top = -9.0
margin_right = 24.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "Sound: "

[node name="LeaveButton" type="Button" parent="Node2D"]
margin_left = 581.0
margin_top = 629.0
margin_right = 719.0
margin_bottom = 696.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="ShowFPS" type="CheckButton" parent="Node2D"]
pause_mode = 2
margin_left = 503.0
margin_top = 228.0
margin_right = 579.0
margin_bottom = 268.0
rect_scale = Vector2( 1, 0.958586 )
custom_icons/off = SubResource( 23 )
custom_icons/on = SubResource( 25 )

[node name="Label" type="Label" parent="Node2D/ShowFPS"]
margin_left = -225.0
margin_top = -5.0
margin_right = -6.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Show FPS: "

[connection signal="pressed" from="Node2D/Sound" to="." method="_on_Sound_pressed"]
[connection signal="button_down" from="Node2D/LeaveButton" to="." method="_on_LeaveButton_button_down"]
[connection signal="button_down" from="Node2D/ShowFPS" to="." method="_on_ShowFPS_button_down"]
